--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "casamento-guga-e-deborah",
+  "name": "back-casamento",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.21.4",
+    "mercadopago": "^1.5.8",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/mercadopago": "^1.5.4",
     "@types/react": "17.0.24",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
